fixed mobile responsivenes and layout issues

--- a/style.css
+++ b/style.css
@@ -22,15 +22,17 @@
 
 body {
     background-color: var(--Stone-100);
-    /* padding: 5rem 2rem; */
-    margin: 6rem auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
     background-color: var(--Rose-50);
     padding: 2rem;
     border-radius: 2rem;
-    max-width: 60%;
+    width: 60%;
     margin: 0 auto;
 }
 
@@ -156,20 +158,22 @@ table td {
     color: hsl(228, 45%, 44%);
 }
 
-@media (max-width: 375px) {
+@media screen and (min-width: 375px) and (max-width: 428px) {
+
+
     body {
         padding: 0;
     }
 
     .container {
-        max-width: 100%;
-        padding: 0;
+        width: 95%;
+        padding: .5rem;
         border-top-left-radius: 0;
         border-top-right-radius: 0;
     }
 
     .sub-container {
-        padding: 2rem;
+        /* padding: 2rem; */
     }
 
 
